<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="ADMIN PAGE"/>
                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="5dp"
                    android:text="Logout"
                    android:textSize="12dp"
                    android:id="@+id/logout"
                    app:icon="@drawable/ic_power"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="15dp"
                android:text="Oracle Pet Shop"/>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="@color/choco"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="6dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:background="@drawable/ic_baseline_shopping_cart_24"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Shop Data"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnTransaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="@color/choco"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="6dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:background="@drawable/ic_baseline_attach_money_24"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Transaction"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnTransactionData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="@android:color/holo_orange_light"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="6dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:background="@drawable/ic_baseline_monetization_on_24"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Transaction Data"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="@android:color/holo_orange_light"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="6dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <ImageView
                            android:background="@drawable/ic_baseline_account_circle_24"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Data User"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>